...
              onPressed: (){
                Navigator.push(context, MaterialPageRoute(builder: (context) => UsdBtc()));
                setState(() { });
              },
              child: Text(
                "USD to BTC",
                key: Key('usd-btc'),
                style: TextStyle(
                  fontSize: 14,
                  color: Colors.black,
                ),
              ),
              style: ElevatedButton.styleFrom(
...
              onPressed: (){
                Navigator.push(context, MaterialPageRoute(builder: (context) => BtcUsd()));
                setState(() { });
              },
              child: Text(
                "BTC to USD",
                key: Key('btc-usd'),
                style: TextStyle(
                  fontSize: 14,
                  color: Colors.black,
                ),
              ),
              style: ElevatedButton.styleFrom(
...
